--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -71,6 +71,8 @@
 @import "blocks/project-page";
 @import "blocks/project-meta";
 @import "blocks/project-vote";
+@import "blocks/vote-results";
+@import "blocks/vote-popup";
 
 // poll page
 @import "blocks/poll-page";
