--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -22,8 +22,8 @@ body {
   font-style: normal;
   font-size: rem(15px);
   line-height: rem(20px);
-  color: dark-text;
-  background-color: white;
+  color: $dark-text;
+  background-color: $white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
