--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -63,3 +63,9 @@
 
 // news-item
 @import "blocks/news-item";
+
+// discussions
+@import "blocks/discussion-item";
+@import "blocks/discussion-list";
+@import "blocks/answers";
+@import "blocks/text-hidden";
