--- a/source/sass/blocks/text-hidden.scss
+++ b/source/sass/blocks/text-hidden.scss
@@ -1,15 +1,23 @@
 .text-hidden__container {
-  opacity: 0;
-  max-height: 0;
+  max-height: 162px;
   overflow: hidden;
-  transition: opacity 0.4s ease, max-height 0.4s ease;
-  display: none;
+  transition: max-height $style-change-duration;
+
+  @media (max-width: $tablet-width - 1) {
+    max-height: 135px;
+  }
+
+  &--comment {
+    max-height: 54px;
+
+    @media (max-width: $mobile-max-width) {
+      max-height: 81px;
+    }
+  }
 
   &--open {
     max-height: 100%;
-    opacity: 1;
-    display: block;
-    transition: opacity 0.4s ease, max-height 0.4s ease;
+    transition: max-height $style-change-duration;
   }
 }
 
