Выносит список проектов в отдельный блок

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -65,6 +65,7 @@
 // projects
 @import "blocks/vote-end";
 @import "blocks/project-item";
+@import "blocks/projects-list";
 @import "blocks/projects";
 
 // project page
