--- a/source/sass/blocks/projects.scss
+++ b/source/sass/blocks/projects.scss
@@ -23,26 +23,10 @@
   border-top-right-radius: 0;
 }
 
-.projects__list {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto;
-  grid-gap: 20px;
-  margin-bottom: 24px;
-
-  .project-item {
-    width: auto;
-  }
-}
-
 .projects__list-btn {
   display: block;
   width: 360px;
-  margin: 0 auto 40px;
-}
-
-.projects__paginator {
-  margin-bottom: 80px;
+  margin: 24px auto 40px;
 }
 
 .projects__archive {
@@ -50,6 +34,7 @@
   align-items: center;
   justify-content: center;
   padding: 22px;
+  margin-top: 80px;
   background-color: $color-bg;
   border-radius: $border-radius;
 }
@@ -68,19 +53,15 @@
     padding-bottom: 88px;
   }
 
-  .projects__list {
-    grid-template-columns: 1fr 1fr;
-    margin-bottom: 48px;
-  }
-
-  .projects__paginator {
-    margin-bottom: 64px;
+  .projects__list-btn {
+    margin-top: 48px;
   }
 
   .projects__archive {
     flex-direction: column;
     align-items: center;
     padding: 24px;
+    margin-top: 64px;
   }
 
   .projects__archive-text {
@@ -112,23 +93,15 @@
     border-top-right-radius: $border-radius;
   }
 
-  .projects__list {
-    display: block;
-    margin-bottom: 40px;
-
-    .project-item {
-      margin-bottom: 16px;
-    }
-  }
-
   .projects__list-btn {
     width: 100%;
     max-width: 360px;
+    margin-top: 40px;
     margin-bottom: 32px;
   }
 
-  .projects__paginator {
-    margin-bottom: 57px;
+  .projects__archive {
+    margin-top: 57px;
   }
 
   .projects__archive-text {
