--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -92,3 +92,7 @@
 @import "blocks/comment-add";
 @import "blocks/all-comments";
 @import "blocks/your-comment";
+
+// activity
+@import "blocks/activity";
+@import "blocks/partners-list";
