--- a/source/components/paginator.html
+++ b/source/components/paginator.html
@@ -1,4 +1,4 @@
-<div class="page-content__paginator paginator">
+<div class="paginator">
   <a class="paginator__item paginator__item--prev paginator__item--disabled" aria-label="предыдущий">
       <svg width="18" height="10" viewBox="0 0 18 10" fill="none" xmlns="http://www.w3.org/2000/svg">
       <use xlink:href="img/sprite.svg#icon-paginator-prev"></use>
