--- a/source/sass/blocks/archive-link.scss
+++ b/source/sass/blocks/archive-link.scss
@@ -3,20 +3,11 @@
   justify-content: center;
   align-items: center;
   padding: 23px;
-  margin-top: 80px;
-  margin-bottom: 80px;
   background-color: $color-bg;
-  border-radius: 5px;
+  border-radius: $border-radius;
 
   @media (max-width: $desktop-width - 1) {
     flex-direction: column;
-    margin-top: 64px;
-    margin-bottom: 88px;
-  }
-
-  @media (max-width: $mobile-max-width) {
-    margin-top: 57px;
-    margin-bottom: 64px;
   }
 }
 
