--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -48,6 +48,17 @@
   color: $dark-main;
 }
 
+.page-content .list-btn {
+  display: block;
+  width: 360px;
+  margin: 24px auto 40px;
+}
+
+.page-content__archive-link {
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
 
 @include tablet {
   .page-content__back-btn {
@@ -60,6 +71,15 @@
     &:active:not(.focus-visible) {
       color: $blue-accent;
     }
+  }
+
+  .page-content .list-btn {
+    margin-top: 48px;
+  }
+
+  .page-content__archive-link {
+    margin-top: 64px;
+    margin-bottom: 88px;
   }
 }
 
@@ -83,5 +103,17 @@
     margin-bottom: 32px;
     font-size: rem(30px);
     line-height: rem(36px);
+  }
+
+  .page-content .list-btn {
+    width: 100%;
+    max-width: 360px;
+    margin-top: 40px;
+    margin-bottom: 32px;
+  }
+
+  .page-content__archive-link {
+    margin-top: 57px;
+    margin-bottom: 64px;
   }
 }
