--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -1,6 +1,27 @@
 html {
   font-size: ($base-font-size / 16px) * 100%;
+  font-family: "Rubik", "Arial", sans-serif;
   box-sizing: border-box;
+
+  &.font-family--arial {
+    font-family: "Arial", sans-serif;
+  }
+
+  &.font-family--times {
+    font-family: "Times New Roman", serif;
+  }
+
+  &.font-size--s {
+    font-size: 16px;
+  }
+
+  &.font-size--m {
+    font-size: 24px;
+  }
+
+  &.font-size--l {
+    font-size: 28px;
+  }
 }
 
 *,
@@ -17,7 +38,6 @@ body {
   min-height: 100vh;
   margin: 0;
   padding: 0;
-  font-family: "Rubik", "Arial", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: rem(15px);
