Добавляет правки по код-ревью с 56 по 65

--- a/source/components/special-popup.html
+++ b/source/components/special-popup.html
@@ -1,4 +1,5 @@
 <section class="special-popup js-hide">
+  <h2 class="visually-hidden">Настройки для слабовидящих</h2>
   <div class="special-popup__wrap">
     <button class="special-popup__btn-close js-close-popup" type="button">
       <svg width="18" height="18" viewBox="0 0 18 18" stroke="#354052" fill="none" xmlns="http://www.w3.org/2000/svg">
