--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,7 @@
 @import "blocks/section";
 @import "blocks/page-body";
 @import "blocks/page-content";
+@import "blocks/back-btn";
 @import "blocks/container";
 @import "blocks/content";
 @import "blocks/logo-link";
